Fix code block line numbers overlapping with content

--- a/themes/triplemode/assets/sass/includes/_highlighter.scss
+++ b/themes/triplemode/assets/sass/includes/_highlighter.scss
@@ -20,3 +20,41 @@
 .post-content > pre > code > a {
     color: $text-color;
 }
+
+.highlight {
+    overflow: auto;
+    border-radius: 3px;
+
+    .lntable {
+        width: 100%;
+        border-spacing: 0;
+        margin: 0;
+
+        .lntd {
+            padding: 0;
+            vertical-align: top;
+
+            &:first-child {
+                width: 1%;
+                white-space: nowrap;
+                user-select: none;
+
+                pre {
+                    padding: 5px 10px 5px 5px;
+                    margin: 0;
+                    color: #6e7681;
+                    text-align: right;
+                    border-right: 1px solid #444;
+                }
+            }
+
+            &:last-child {
+                pre {
+                    padding: 5px 5px 5px 10px;
+                    margin: 0;
+                    overflow: auto;
+                }
+            }
+        }
+    }
+}
